refactor and supports show selected files in dialog